err/pymodel.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyModel-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymodel'...
Compiling './lib/python3.5/site-packages/pymodel/ModelProgram.py'...
***   File "./lib/python3.5/site-packages/pymodel/ModelProgram.py", line 107
    print 'No Reset function for model program %s' % self.module.__name__
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pymodel/pma.py'...
***   File "./lib/python3.5/site-packages/pymodel/pma.py", line 18
    print '%s states, %s transitions, %s accepting states, %s unsafe states' % \
                                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pymodel/pmt.py'...
***   File "./lib/python3.5/site-packages/pymodel/pmt.py", line 106
    print aname if options.quiet else '%s%s / %s' % (aname, args, qResult)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pymodel/pmv.py'...
***   File "./lib/python3.5/site-packages/pymodel/pmv.py", line 30
    print cmd # DEBUG
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pymodel/trun.py'...
***   File "./lib/python3.5/site-packages/pymodel/trun.py", line 18
    print description
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pymodel/wsgirunner.py'...
***   File "./lib/python3.5/site-packages/pymodel/wsgirunner.py", line 44
    print "Running %s at http://localhost:%s/" \
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
